--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "youtube-thumbnail-downloader",
+  "name": "ShareThumb",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/App.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^3.1.3",
     "expo": "~50.0.7",
+    "expo-media-library": "^15.9.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "^18.2.0",
+    "react-native": "0.73.4",
+    "react-native-web": "^0.19.10",
+    "twrnc": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
