--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "Youtube Thumbnail Downloader",
+  "name": "YoutubeThumbnailDownloader",
   "version": "1.0.0",
   "main": "src/App.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~7.8.0",
     "@expo/metro-runtime": "^3.1.3",
-    "expo": "~50.0.7",
+    "expo": "^50.0.11",
+    "expo-dev-client": "^3.3.9",
     "expo-media-library": "^15.9.1",
+    "expo-share-intent": "^1.0.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.4",
+    "react-native-google-mobile-ads": "^13.0.2",
     "react-native-web": "^0.19.10",
     "twrnc": "^4.0.0"
   },
